# kvmSwitch

./: .gitignore  CHANGELOG.md  LICENSE  README.md  cabal.project  flake.nix  hie.yaml  kvmSwitch.cabal
app/: Main.hs
nix/: copyToPi.nix  install.sh  kvmSwitch.nix
src/: Config.hs  MyLib.hs  Scan.hs
src/EitherDo/: Edo.hs
src/GPIO/: Error.hs  FFI.hs  Libgpiod.hs  PinMap.hs  Types.hs
src/OneWire/: LedSpi.hs
