cabal-version:      3.4
name:               kvmSwitch
version:            0.1.0.0
-- synopsis:
-- description:
license:            NONE
author:             nj.cooke@outlook.com
maintainer:         Nick Cooke
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  MyLib
    -- other-modules:
    -- other-extensions:
    build-depends:    
        base 
      , text

    hs-source-dirs:   src
    default-language: GHC2021

executable kvmSwitch
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:
        base 
      , kvmSwitch
      
    hs-source-dirs:   app
    default-language: GHC2021

test-suite kvmSwitch-test
    import:           warnings
    default-language: GHC2021
    -- other-modules:
    -- other-extensions:
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        base 
      , kvmSwitch
