cabal-version:      3.4
name:               kvmSwitch
version:            0.1.0.0
-- synopsis:
-- description:
license:            NONE
author:             nj.cooke@outlook.com
maintainer:         Nick Cooke
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  
        MyLib
      , Config
      , Scan
      , EitherDo.Edo
      , GPIO.Types
      , GPIO.Error
      , GPIO.PinMap
      , GPIO.FFI
      , GPIO.Libgpiod

    -- other-modules:
    -- other-extensions:
    build-depends:    
        base 
      , text
      , yaml
      , containers

    hs-source-dirs:   src
    default-language: GHC2021
    pkgconfig-depends: libgpiod >= 1.6 && < 1.7
    extra-libraries:   gpiod

executable kvmSwitch
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:
        base 
      , kvmSwitch
      , yaml
      , directory
      , filepath
      , containers
      
    hs-source-dirs:   app
    default-language: GHC2021

test-suite kvmSwitch-test
    import:           warnings
    default-language: GHC2021
    -- other-modules:
    -- other-extensions:
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        base 
      , kvmSwitch
